--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -15,14 +15,17 @@
             android:id="@+id/txt_reviews_found"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_margin="30dp"
             android:layout_alignBottom="@+id/img_movie"
+            android:textSize="20sp"
+            android:textStyle="bold"
             android:text="Reviews(%1$s!)" />
 
         <ImageView
             android:id="@+id/img_movie"
             android:layout_width="150dp"
-            android:layout_height="250dp"
+            android:layout_height="200dp"
+            android:layout_margin="8dp"
             android:layout_alignParentEnd="true"
             android:layout_toEndOf="@+id/movie_title" />
 
