--- a/app/src/main/res/layout/movies_item.xml
+++ b/app/src/main/res/layout/movies_item.xml
@@ -1,40 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="180dp"
+    android:layout_height="250dp"
     xmlns:tools="http://schemas.android.com/tools"
-    android:padding="8dp"
-    android:orientation="horizontal">
+    android:layout_margin="8dp"
+    android:layout_marginBottom="16dp">
 
-    <ImageView
-        android:id="@+id/img_movie"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:src="@mipmap/ic_launcher"/>
-
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:layout_gravity="bottom"
+        android:background="@color/black"
+        android:padding="8dp">
+
+        <ImageView
+            android:id="@+id/img_movie"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@mipmap/ic_launcher" />
+
+        <TextView
+            android:id="@+id/txt_movie_rate"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="8dp"
+            android:background="@drawable/ic_round_textview"
+            android:backgroundTint="@color/black"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:textSize="15sp"
+            tools:text="5.5" />
+
+        <TextView
+            android:id="@+id/txt_movie_year"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/txt_movie_name"
+            android:padding="8dp"
+            android:textColor="@color/white"
+            tools:text="2020" />
 
         <TextView
             android:id="@+id/txt_movie_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="2dp"
+            android:layout_marginBottom="8dp"
             android:textSize="20sp"
             android:textStyle="bold"
-            tools:text="The Lion King"/>
-
-        <TextView
-            android:id="@+id/txt_movie_description"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:ellipsize="end"
-            android:maxLines="2"
-            tools:text="some description to the movie"/>
+            android:textColor="@color/white"
+            tools:text="The Lion King" />
 
 
-    </LinearLayout>
+    </RelativeLayout>
 
-</LinearLayout>
+</com.google.android.material.card.MaterialCardView>
