--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -13,41 +13,46 @@
 
     <RelativeLayout
         android:id="@+id/movie_info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="200dp">
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="180dp"
+        android:layout_marginEnd="15dp">
 
         <ImageView
             android:id="@+id/img_movie"
             android:layout_width="150dp"
-            android:layout_height="250dp"/>
+            android:layout_height="250dp" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="60dp"
-            android:orientation="vertical"
-            android:layout_toEndOf="@+id/img_movie">
+            android:layout_marginTop="15dp"
+            android:layout_toEndOf="@+id/img_movie"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/movie_title"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="95dp"
+                android:ellipsize="end"
+                android:gravity="bottom"
+                android:maxLines="3"
+                android:textColor="@android:color/white"
                 android:textSize="25sp"
                 android:textStyle="bold"
-                android:textColor="@android:color/white"
-                tools:text= "The Lion King"/>
+                tools:text="The Lion King" />
 
             <TextView
                 android:id="@+id/movie_popularity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                tools:text= "no of people watching"/>
+                android:layout_marginTop="35dp"
+                tools:text="no of people watching" />
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
@@ -56,18 +61,18 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    tools:text= "5"/>
+                    tools:text="5" />
 
                 <RatingBar
                     android:id="@+id/movie_rating"
+                    style="?android:attr/ratingBarStyleSmall"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    style="?android:attr/ratingBarStyleSmall"
                     android:layout_marginStart="15sp"
                     android:layout_marginTop="15dp"
+                    android:isIndicator="true"
                     android:numStars="5"
-                    android:stepSize="0.1"
-                    android:isIndicator="true" />
+                    android:stepSize="0.1" />
 
             </LinearLayout>
 
@@ -81,13 +86,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/movie_info"
-        tools:text= "Disney movie form year 19XX"/>
+        android:textSize="15sp"
+        tools:text="Disney movie form year 19XX"/>
 
     <Button
         android:id="@+id/btn_show_reviews"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="25dp"
         android:layout_centerInParent="true"
         android:layout_alignParentBottom="true"
         android:text="Show Reviews"/>
