--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -15,9 +15,9 @@
         android:id="@+id/movie_info"
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        android:layout_marginStart="15dp"
+        android:layout_marginStart="@dimen/margin_standard"
         android:layout_marginTop="180dp"
-        android:layout_marginEnd="15dp">
+        android:layout_marginEnd="@dimen/margin_standard">
 
         <ImageView
             android:id="@+id/img_movie"
@@ -28,7 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="@dimen/margin_standard"
             android:layout_toEndOf="@+id/img_movie"
             android:orientation="vertical">
 
@@ -55,7 +55,7 @@
                 android:id="@+id/movie_genres"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="@dimen/margin_standard"
                 tools:text="genres" />
 
             <LinearLayout
@@ -67,7 +67,7 @@
                     android:id="@+id/movie_ratingNo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="@dimen/margin_standard"
                     tools:text="5" />
 
                 <RatingBar
@@ -76,7 +76,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="15sp"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="@dimen/margin_standard"
                     android:isIndicator="true"
                     android:numStars="5"
                     android:stepSize="0.1" />
@@ -89,7 +89,7 @@
 
     <TextView
         android:id="@+id/movie_detail"
-        android:layout_margin="15dp"
+        android:layout_margin="@dimen/margin_standard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/movie_info"
