--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,122 +1,148 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
+    android:fillViewport="true"
     tools:context=".ui.DetailFragment">
 
-    <ImageView
-        android:id="@+id/img_movie_backdrop"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="300dp"/>
+        android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:id="@+id/movie_info"
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:layout_marginStart="@dimen/margin_standard"
-        android:layout_marginTop="180dp"
-        android:layout_marginEnd="@dimen/margin_standard">
+        <ImageView
+            android:id="@+id/img_movie_backdrop"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
 
         <ImageView
             android:id="@+id/img_movie"
             android:layout_width="150dp"
-            android:layout_height="250dp" />
+            android:layout_height="250dp"
+            android:layout_marginStart="@dimen/margin_standard"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.386" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="@dimen/margin_standard"
-            android:layout_toEndOf="@+id/img_movie"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/movie_title"
-                android:layout_width="wrap_content"
-                android:layout_height="95dp"
-                android:ellipsize="end"
-                android:gravity="bottom"
-                android:maxLines="3"
-                android:textColor="@android:color/white"
-                android:textSize="25sp"
-                android:textStyle="bold"
-                tools:text="The Lion King" />
-
-            <TextView
-                android:id="@+id/movie_popularity"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                tools:text="no of people watching" />
-
-            <TextView
-                android:id="@+id/movie_genres"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_standard"
-                tools:text="genres" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/movie_ratingNo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_standard"
-                    tools:text="5" />
-
-                <RatingBar
-                    android:id="@+id/movie_rating"
-                    style="?android:attr/ratingBarStyleSmall"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="15sp"
-                    android:layout_marginTop="@dimen/margin_standard"
-                    android:isIndicator="true"
-                    android:numStars="5"
-                    android:stepSize="0.1" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </RelativeLayout>
-
-    <TextView
-        android:id="@+id/movie_detail"
-        android:layout_margin="@dimen/margin_standard"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/movie_info"
-        android:textSize="15sp"
-        tools:text="Disney movie form year 19XX"/>
-
-    <Button
-        android:id="@+id/btn_show_reviews"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="25dp"
-        android:layout_centerInParent="true"
-        android:layout_alignParentBottom="true"
-        android:text="Show Reviews" />
-
-    <RelativeLayout
-        android:id="@+id/progressBarMovieDetail"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone">
-
-        <ProgressBar
+        <TextView
+            android:id="@+id/movie_title"
+            style="@style/MovieName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true" />
+            android:layout_margin="@dimen/margin_standard"
+            android:layout_marginEnd="@dimen/margin_standard"
+            android:ellipsize="end"
+            android:gravity="bottom"
+            android:maxLines="4"
+            app:layout_constrainedWidth="true"
+            app:layout_constraintBottom_toBottomOf="@+id/img_movie_backdrop"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/img_movie"
+            tools:text="The Lion King" />
 
-    </RelativeLayout>
+        <TextView
+            android:id="@+id/movie_popularity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_standard"
+            app:layout_constrainedWidth="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.01"
+            app:layout_constraintStart_toEndOf="@+id/img_movie"
+            app:layout_constraintTop_toBottomOf="@+id/img_movie_backdrop"
+            tools:text="no of people watching" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/movie_genres"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_standard"
+            android:ellipsize="end"
+            android:gravity="top"
+            android:maxLines="3"
+            app:layout_constrainedWidth="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.005"
+            app:layout_constraintStart_toEndOf="@+id/img_movie"
+            app:layout_constraintTop_toBottomOf="@+id/movie_popularity"
+            tools:text="genres" />
+
+        <TextView
+            android:id="@+id/movie_ratingNo"
+            style="@style/MovieRate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_standard"
+            app:layout_constraintBottom_toTopOf="@+id/movie_detail"
+            app:layout_constraintStart_toEndOf="@+id/img_movie"
+            app:layout_constraintTop_toBottomOf="@+id/movie_genres"
+            tools:text="10" />
+
+        <RatingBar
+            android:id="@+id/movie_rating"
+            style="?android:attr/ratingBarStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_standard"
+            android:isIndicator="true"
+            android:numStars="5"
+            android:stepSize="0.1"
+            app:layout_constraintBottom_toTopOf="@+id/movie_detail"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/movie_ratingNo"
+            app:layout_constraintTop_toBottomOf="@+id/movie_genres" />
+
+        <TextView
+            android:id="@+id/movie_detail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_standard"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/img_movie"
+            tools:text="Disney movie form year 19XX" />
+
+        <Button
+            android:id="@+id/btn_show_reviews"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
+            android:layout_margin="@dimen/margin_standard"
+            android:text="@string/show_reviews"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/movie_detail"
+            app:layout_constraintVertical_bias="0.924" />
+
+        <RelativeLayout
+            android:id="@+id/progressBarMovieDetail"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone">
+
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true" />
+
+        </RelativeLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.core.widget.NestedScrollView>
+
+
 
