--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -27,7 +27,7 @@
             android:layout_height="200dp"
             android:layout_margin="8dp"
             android:layout_alignParentEnd="true"
-            android:layout_toEndOf="@+id/movie_title" />
+            android:layout_toEndOf="@+id/txt_reviews_found" />
 
 
     </RelativeLayout>
