--- a/app/src/main/res/layout/movies_item.xml
+++ b/app/src/main/res/layout/movies_item.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="180dp"
+    android:layout_width="170dp"
     android:layout_height="250dp"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_margin="8dp"
-    android:layout_marginBottom="16dp">
+    android:layout_marginStart="8dp"
+    android:layout_marginTop="8dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -21,16 +21,12 @@
 
         <TextView
             android:id="@+id/txt_movie_rate"
+            style="@style/MovieRateRound"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_alignParentEnd="true"
             android:layout_margin="8dp"
-            android:background="@drawable/ic_round_textview"
-            android:backgroundTint="@color/black"
-            android:gravity="center"
-            android:textColor="@color/white"
-            android:textSize="15sp"
-            tools:text="5.5" />
+            android:gravity="center" />
 
         <TextView
             android:id="@+id/txt_movie_year"
@@ -43,14 +39,12 @@
 
         <TextView
             android:id="@+id/txt_movie_name"
+            style="@style/MovieName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="2dp"
             android:layout_marginBottom="8dp"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:textColor="@color/white"
             tools:text="The Lion King" />
 
 
